[gd_scene load_steps=25 format=3 uid="uid://b3lq4srperwqd"]

[ext_resource type="Script" uid="uid://csjccrhj5wnx7" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="1_iq20y"]
[ext_resource type="Script" uid="uid://dnovphntdavx2" path="res://scenes/testbed/testbed.gd" id="1_s5bwe"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="2_s3sv4"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="3_unict"]
[ext_resource type="Script" uid="uid://cuffvge5ad4aa" path="res://addons/phantom_camera/scripts/resources/phantom_camera_noise_3d.gd" id="4_1j73f"]
[ext_resource type="Environment" uid="uid://ycxtlw1ckqyf" path="res://resources/environment.tres" id="4_l7hvs"]
[ext_resource type="PackedScene" uid="uid://bcdhofcjao8v8" path="res://scenes/osprey/osprey.tscn" id="4_s3sv4"]
[ext_resource type="Texture2D" uid="uid://cm4rd5sf8etxe" path="res://textures/skybox/NightSkyHDRI009_4K_TONEMAPPED.jpg" id="7_jepp6"]
[ext_resource type="MeshLibrary" uid="uid://4r4psddilayh" path="res://resources/tileset.tres" id="9_s5bwe"]
[ext_resource type="AudioStream" uid="uid://ct5wjgvvnprci" path="res://audio/Gorge Path Theme.ogg" id="10_ihqx2"]
[ext_resource type="Script" uid="uid://cbrsep672y3jn" path="res://scenes/testbed/level_builder.gd" id="10_l7hvs"]
[ext_resource type="Shader" uid="uid://cloable5fibdk" path="res://shaders/speed_effect.gdshader" id="11_e6bsl"]
[ext_resource type="Shader" uid="uid://cemq4viuqqwhg" path="res://shaders/bar_shader.gdshader" id="12_1j73f"]
[ext_resource type="Texture2D" uid="uid://cf3h18wwgvhso" path="res://textures/feather.svg" id="12_7cfdx"]

[sub_resource type="Resource" id="Resource_mdb0y"]
script = ExtResource("2_s3sv4")

[sub_resource type="SphereShape3D" id="SphereShape3D_rse20"]
radius = 5.0

[sub_resource type="Resource" id="Resource_e6bsl"]
script = ExtResource("4_1j73f")
amplitude = 5.0
randomize_noise_seed = 1
rotational_noise = false
positional_noise = true
metadata/_custom_type_script = "uid://cuffvge5ad4aa"

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_rse20"]
panorama = ExtResource("7_jepp6")
filter = false

[sub_resource type="Sky" id="Sky_unict"]
sky_material = SubResource("PanoramaSkyMaterial_rse20")

[sub_resource type="Environment" id="Environment_e6bsl"]
background_mode = 2
background_color = Color(0.7708395, 0.77083945, 0.77083945, 1)
sky = SubResource("Sky_unict")
sky_custom_fov = 70.0
sky_rotation = Vector3(0, -0.10646509, 1.8535397)
ambient_light_source = 3
ambient_light_color = Color(0.6255971, 0.6255971, 0.62559694, 1)
ambient_light_sky_contribution = 0.5
ambient_light_energy = 3.3
tonemap_mode = 3
tonemap_exposure = 0.84
tonemap_white = 1.28
ssao_radius = 3.3
ssao_intensity = 6.51
ssao_power = 0.40191478
ssao_detail = 1.14
ssao_horizon = 0.23
fog_enabled = true
fog_mode = 1
fog_light_color = Color(0, 0.078431375, 0.11764706, 1)
fog_light_energy = 1.66
fog_density = 1.0
fog_aerial_perspective = 1.0
fog_depth_curve = 1.5157129
fog_depth_begin = 0.0
fog_depth_end = 256.1
volumetric_fog_density = 0.1457
volumetric_fog_emission = Color(0.65012825, 0.6501283, 0.65012825, 1)
volumetric_fog_emission_energy = 3.9
volumetric_fog_detail_spread = 1.0245303
adjustment_brightness = 0.75
adjustment_contrast = 1.08
adjustment_saturation = 1.45

[sub_resource type="FastNoiseLite" id="FastNoiseLite_p0jio"]
noise_type = 0
frequency = 0.0573

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_6u2jf"]
noise = SubResource("FastNoiseLite_p0jio")
seamless_blend_skirt = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6u2jf"]
shader = ExtResource("11_e6bsl")
shader_parameter/noise = SubResource("NoiseTexture2D_6u2jf")
shader_parameter/line_count = 2.0
shader_parameter/distortion_power = 0.10000000149012
shader_parameter/line_falloff = 0.0
shader_parameter/mask_size = 0.14800000703
shader_parameter/mask_edge = 0.2550000121125
shader_parameter/animation_speed = 9.7690004165275
shader_parameter/blur_strength = 0.00999999977648
shader_parameter/effect_power = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p0jio"]
shader = ExtResource("12_1j73f")
shader_parameter/percent = 0.5130000243675

[node name="Testbed" type="Node3D"]
script = ExtResource("1_s5bwe")

[node name="PhantomCamera3D" type="Node3D" parent="." node_paths=PackedStringArray("follow_target")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, -8.742278e-07, 31, -10)
top_level = true
script = ExtResource("1_iq20y")
follow_mode = 5
follow_target = NodePath("../osprey")
tween_resource = SubResource("Resource_mdb0y")
tween_on_load = false
environment = ExtResource("4_l7hvs")
follow_offset = Vector3(0, 1, 0)
follow_damping = true
follow_damping_value = Vector3(0.05, 0.05, 0.05)
follow_distance = 10.0
horizontal_rotation_offset = -3.141592653589793
spring_length = 10.0
shape = SubResource("SphereShape3D_rse20")
noise = SubResource("Resource_e6bsl")
metadata/_custom_type_script = "uid://csjccrhj5wnx7"

[node name="Camera3D" type="Camera3D" parent="."]
physics_interpolation_mode = 1
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, -0.15253457, 31.120592, -10.076788)
environment = SubResource("Environment_e6bsl")
fov = 37.849285

[node name="PhantomCameraHost" type="Node" parent="Camera3D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("3_unict")
metadata/_custom_type_script = "uid://bd046eokvcnu2"

[node name="osprey" parent="." instance=ExtResource("4_s3sv4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 30, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.9291326, 0.3697467, 0, 0.31956276, 0.8030259, 0.50302005, 0.18598996, 0.4673722, -0.864275, 0, 0, 0)
shadow_enabled = true
shadow_opacity = 0.75
directional_shadow_mode = 0
directional_shadow_fade_start = 0.5
directional_shadow_max_distance = 400.0

[node name="LevelBuilder" type="GridMap" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 250, -3, 0)
mesh_library = ExtResource("9_s5bwe")
cell_size = Vector3(500, 0.01, 250)
cell_center_y = false
data = {
"cells": PackedInt32Array(65535, 0, 1, 131071, 0, 15, 196607, 0, 21, 262143, 0, 14, 327679, 0, 26, 65535, 1, 1, 131071, 1, 15, 196607, 1, 21, 262143, 1, 14, 327679, 1, 26, 65535, 2, 1, 131071, 2, 15, 196607, 2, 21, 262143, 2, 14, 327679, 2, 26, 65535, 3, 1, 131071, 3, 15, 196607, 3, 21, 262143, 3, 14, 327679, 3, 26, 65535, 4, 1, 131071, 4, 15, 196607, 4, 21, 262143, 4, 14, 327679, 4, 26)
}
script = ExtResource("10_l7hvs")
metadata/_editor_floor_ = Vector3(0, 1, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SpeedEffect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_6u2jf")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GorgePathTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ihqx2")
autoplay = true
parameters/looping = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer2"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CanvasLayer2/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778

[node name="ScoreLabel" type="Label" parent="CanvasLayer2/UI/AspectRatioContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "000"

[node name="SpeedDisplay" type="TextureRect" parent="CanvasLayer2/UI/AspectRatioContainer"]
material = SubResource("ShaderMaterial_p0jio")
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("12_7cfdx")
